src/styles/main.scss
@import "globals";

html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  background: url("/img/website_background.svg") repeat;
  background-size: cover;
  min-height: 100vh;
  font-family: "Lato", sans-serif;
  text-shadow:
    -1px -1px 0 white,
    1px -1px 0 white,
    -1px 1px 0 white,
    1px 1px 0 white;
  font-size: 1.1em;
  margin: 0;
}

a {
  text-decoration: none;
  color: inherit;
  border-bottom: 2px solid $primary-color;
}

a:hover {
  color: $primary-color;
  text-shadow: none;
}

p {
  line-height: 1.45;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Lora", serif;
  line-height: 1;
  margin-bottom: 0.5em;
}

h1.name {
  font-size: 4em;
  margin: 0;
  border-bottom: 4px solid $primary-color;
  padding-bottom: 0.1em;
}

h1 {
  font-size: 3em;
}

h2 {
  font-size: 2em;
}

h3 {
  font-size: 1.5em;
}

code {
  font-family: $mono;
}

ul,
ol {
  line-height: 1.4;
}

ul {
  list-style-type: square;
}

nav {
  margin-bottom: 1.5em;
  // specificity overrides for resume styles
  font-family: "Lato", sans-serif;
  font-size: 1.1rem;

  ul {
    list-style-type: none;
    padding: 0;
    margin-top: 0;
    font-weight: 600;

    li {
      display: inline-block;
      padding-right: 1em;
    }
  }
}

video, audio {
  // don't use the body's "faux-outline" text shadow
  text-shadow: none;
}

main {
  margin: 0 auto;
  box-shadow: 0 0 512px rgba($primary-color, 0.15);
  padding: 1.5rem $wrapper-horizontal-padding;
  border: 1px solid rgba(255,255,255, 0.5);
}

@include media-query($on-laptop) {
  main {
    padding: 1.5rem;
  }
}

main.front,
main.credits {
  max-width: calc(640px + #{$wrapper-horizontal-padding * 2});
}

main.front {
  .tagline {
    margin-top: 0.5em;
    font-size: 1.5em;
    font-weight: 600;
    line-height: 1.3;
  }

  .lede {
    line-height: 1.55;
    font-size: 1.24rem;
    margin-bottom: 2em;
  }

  ul.skills,
  ul.interests {
    list-style: none;
    padding: 0;
    line-height: 1.6;
    text-align: center;

    li {
      display: inline-block;
      margin-right: 1em;
      white-space: nowrap;
    }
  }

  ul.interests {
    font-weight: bold;
  }

  ul.projects {
    li {
      margin: 0.5em 0;
    }

    a {
      font-weight: bold;
    }
  }
}

footer {
  opacity: 0.5;
  margin: 2rem;
  text-align: right;
  max-width: 440px;
  float: right;
  font-size: 0.8rem;
  clear: both;
}

.primary-accent {
  color: $primary-color;
}

.giphy-embed { // used on the 404 page
  border: $separator-border;
}

@import "credits";
@import "project";
@import "resume";
@import "smarthome";

